<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_ErrorStates" Id="{01fc80e0-e88b-4244-badd-6975c9c0b2a0}">
    <Declaration><![CDATA[// Error states that can occur in the program
TYPE ST_ErrorStates :
STRUCT
    // Leak Alarms
    bLeakDetected : BOOL; // Leak detected on one of the sensors

    // Hardware Failure
    bHardwareFailure : BOOL; // A hardware component has failed

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>